--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -23,8 +23,8 @@
                     <div class="item item-input">
                         <input type="password" placeholder="Confirm Password">
                     </div>
-                    <div class="padding-vertical btn-rest">
-                        <button class="button button-small button-balanced" type="submit">Submit</button>
+                    <div class="padding-horizontal btn-rest">
+                        <button class="button button-block button-balanced" type="submit">Submit</button>
                     </div>
                 </div>
             </form>
