--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,53 +1,53 @@
 <ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-royal">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-royal">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-royal">
-      <h1 class="title">Menu</h1>
-    </ion-header-bar>
-    <ion-content>
-         <ion-list>
-       <div>
+    <ion-side-menu side="left" width=200>
+        <ion-header-bar class="bar-royal">
+            <h1 class="title">Menu</h1>
+        </ion-header-bar>
+        <ion-content>
+            <ion-list>
+                <div>
 
-        <ion-item nav-clear menu-close href="#/app/home">
-            <span>Home</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/profile">
-            <span>My Profile</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/balance">
-            <span>Your Balance</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/selling">
-            <span>Selling Approvals</span>
-            <span class="badge badge-assertive">1</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/transaction">
-            <span>Transaction History</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/aboutus">
-            <span>About Us</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/faq">
-            <span>FAQ</span>
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/welcome">
-            <span>Logout</span>
-        </ion-item>
-       
-        </div>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+                    <ion-item nav-clear menu-close href="#/app/home">
+                        <span>Home</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/profile">
+                        <span>My Profile</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/balance">
+                        <span>Your Balance</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/selling">
+                        <span>Selling Approvals</span>
+                        <span class="badge badge-assertive">1</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/transaction">
+                        <span>Transaction History</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/aboutus">
+                        <span>About Us</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/app/faq">
+                        <span>FAQ</span>
+                    </ion-item>
+                    <ion-item nav-clear menu-close href="#/welcome">
+                        <span>Logout</span>
+                    </ion-item>
+
+                </div>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
 </ion-side-menus>
