--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -6,7 +6,7 @@
                     <div class="row text-center">
                         <div class="col">
                             <div class="balance bod-right">
-                                <h4 class="assertive">Rs.100</h4>
+                                <h4 class="calm">Rs.100</h4>
                                 <div class="label-name">
                                     Purchase Balance
                                 </div>
@@ -14,7 +14,7 @@
                         </div>
                         <div class="col">
                             <div class="balance">
-                                <h4 class="assertive">Rs.100</h4>
+                                <h4 class="calm">Rs.100</h4>
 
                                 <div class="label-name">
                                     Sell Balance
