--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -14,7 +14,7 @@
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="text">
+                        <input type="text" maxlength="10">
                     </label>
                     <div class="padding">
                         <button class="button button-block button-balanced" type="submit">Request</button>
