--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -14,7 +14,7 @@
                         <input type="text">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" type="submit">Add Balance</button>
+                        <button class="button button-block button-balanced" type="submit" ng-click="showPopup();">Add Balance</button>
                     </div>
                 </div>
             </form>
