--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
             <!--            <div class="item item-input area">-->
             <div class="row">
                 <div class="col">
-                    <h4>Membership No.</h4>
+                    <h5 class="member">Membership No.</h5>
                 </div>
                 <div class="col">
                     <p class="home-p" ng-click="openedit();">Please Select</p>
