--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,8 +2,8 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="profile-img">
-                <img src="img/logo.png">
-                <h3>Wohlig Technology</h3>
+                <img src="img/applelogo.jpg">
+                <h3>Apple Store</h3>
             </div>
 
             <div class="list profile-cont">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Apple Store CST Mumbai-400 001.
                     </div>
                 </div>
                 <div class="item item-input item-text-wrap header">
@@ -41,26 +41,26 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        The Apple Store is a chain of retail stores owned and operated by Apple Inc., dealing with computers and consumer electronics.
                     </div>
                 </div>
                 <div class="item item-input item-text-wrap header">
-                    <h2>Shops</h2>
+                    <h2>Shops Photos</h2>
                 </div>
                 <div class="item item-input item-text-wrap itemproducts">
                     <div class="input-div">
                         <div class="img-profile">
-                            <img src="img/dookie.jpg">
+                            <img src="img/add.png">
                         </div>
                     </div>
                     <div class="input-div">
                         <div class="img-profile">
-                            <img src="img/dookie.jpg">
+                            <img src="img/add.png">
                         </div>
                     </div>
                     <div class="input-div">
                         <div class="img-profile">
-                            <img src="img/dookie.jpg">
+                            <img src="img/add.png">
                         </div>
                     </div>
                     <!--
@@ -70,20 +70,23 @@
 -->
                 </div>
                 <div class="item item-input item-text-wrap header">
-                    <h2>Products</h2>
+                    <h2>Products Photos</h2>
                 </div>
                 <div class="item item-input item-text-wrap itemproducts">
                     <div class="input-div">
-                        <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
-                        </button>
+                        <div class="img-profile">
+                            <img src="img/add.png">
+                        </div>
                     </div>
                     <div class="input-div">
-                        <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
-                        </button>
+                        <div class="img-profile">
+                            <img src="img/add.png">
+                        </div>
                     </div>
                     <div class="input-div">
-                        <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
-                        </button>
+                        <div class="img-profile">
+                            <img src="img/add.png">
+                        </div>
                     </div>
                 </div>
 
