--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,7 +3,7 @@
         <div class="incard card-shop">
             <ion-list class="lesspadding product-cont">
                 <ion-item class="product">
-                    <h2>Nokia India</h2>
+                    <h2>Apple India</h2>
                     <div class="pull-right balanced amount">
                         Rs.60,000
                     </div>
@@ -15,7 +15,7 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Apple Store CST Mumbai-400 001.
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
@@ -23,58 +23,45 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    The Apple Store is a chain of retail stores owned and operated by Apple Inc., dealing with computers and consumer electronics.
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
-                <h2> Shops</h2>
+                <h2> Shops Photos</h2>
             </div>
-            <div class="item item-input item-text-wrap itemproducts">
+            <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openpswd();"><img src="img/shop1.png">
+                    </button>
                 </div>
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openpswd();"><img src="img/shop2.png">
+                    </button>
                 </div>
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openpswd();"><img src="img/shop3.png">
+                    </button>
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
-                <h2>  Products</h2>
+                <h2>  Products Photos</h2>
             </div>
-            <div class="item item-input item-text-wrap itemproducts">
+            <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openshops();"><img src="img/product1.png">
+                    </button>
                 </div>
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openshops();"><img src="img/product2.png">
+                    </button>
                 </div>
                 <div class="input-div">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openshops();"><img src="img/product3.png">
+                    </button>
                 </div>
-                <!--
-               <div class="input">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-</div>
--->
             </div>
         </div>
     </ion-content>
-
-
     <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openedit();">
         <h4>Purchase</h4>
     </ion-footer-bar>
