--- a/css/ionic.app.css
+++ b/css/ionic.app.css
@@ -2555,9 +2555,9 @@ body, .ionic-body {
   padding: 0;
   color: #3b3f42;
   word-wrap: break-word;
-  font-size: 12px;
+  font-size: 14px;
   font-family: "PT Sans", sans-serif;
-  line-height: 17px;
+  line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
   -webkit-user-drag: none;
@@ -2763,7 +2763,7 @@ ion-infinite-scroll {
  * --------------------------------------------------
  */
 p {
-  margin: 0 0 8.5px; }
+  margin: 0 0 10px; }
 
 small {
   font-size: 85%; }
@@ -2790,46 +2790,46 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1; }
 
 h1, .h1, h2, .h2, h3, .h3 {
-  margin-top: 17px;
-  margin-bottom: 8.5px; }
+  margin-top: 20px;
+  margin-bottom: 10px; }
   h1:first-child, .h1:first-child, h2:first-child, .h2:first-child, h3:first-child, .h3:first-child {
     margin-top: 0; }
   h1 + h1, h1 + .h1, h1 + h2, h1 + .h2, h1 + h3, h1 + .h3, .h1 + h1, .h1 + .h1, .h1 + h2, .h1 + .h2, .h1 + h3, .h1 + .h3, h2 + h1, h2 + .h1, h2 + h2, h2 + .h2, h2 + h3, h2 + .h3, .h2 + h1, .h2 + .h1, .h2 + h2, .h2 + .h2, .h2 + h3, .h2 + .h3, h3 + h1, h3 + .h1, h3 + h2, h3 + .h2, h3 + h3, h3 + .h3, .h3 + h1, .h3 + .h1, .h3 + h2, .h3 + .h2, .h3 + h3, .h3 + .h3 {
-    margin-top: 8.5px; }
+    margin-top: 10px; }
 
 h4, .h4, h5, .h5, h6, .h6 {
-  margin-top: 8.5px;
-  margin-bottom: 8.5px; }
+  margin-top: 10px;
+  margin-bottom: 10px; }
 
 h1, .h1 {
-  font-size: 31px; }
+  font-size: 36px; }
 
 h2, .h2 {
-  font-size: 25px; }
+  font-size: 30px; }
 
 h3, .h3 {
-  font-size: 21px; }
+  font-size: 24px; }
 
 h4, .h4 {
-  font-size: 15px; }
+  font-size: 18px; }
 
 h5, .h5 {
-  font-size: 12px; }
+  font-size: 14px; }
 
 h6, .h6 {
-  font-size: 11px; }
-
-h1 small, .h1 small {
-  font-size: 21px; }
-
-h2 small, .h2 small {
-  font-size: 15px; }
-
-h3 small, .h3 small, h4 small, .h4 small {
   font-size: 12px; }
 
+h1 small, .h1 small {
+  font-size: 24px; }
+
+h2 small, .h2 small {
+  font-size: 18px; }
+
+h3 small, .h3 small, h4 small, .h4 small {
+  font-size: 14px; }
+
 dl {
-  margin-bottom: 17px; }
+  margin-bottom: 20px; }
 
 dt, dd {
   line-height: 1.42857; }
@@ -2838,12 +2838,12 @@ dt {
   font-weight: bold; }
 
 blockquote {
-  margin: 0 0 17px;
-  padding: 8.5px 17px;
+  margin: 0 0 20px;
+  padding: 10px 20px;
   border-left: 5px solid gray; }
   blockquote p {
     font-weight: 300;
-    font-size: 15px;
+    font-size: 17.5px;
     line-height: 1.25; }
   blockquote p:last-child {
     margin-bottom: 0; }
@@ -2858,7 +2858,7 @@ q:before, q:after, blockquote:before, blockquote:after {
 
 address {
   display: block;
-  margin-bottom: 17px;
+  margin-bottom: 20px;
   font-style: normal;
   line-height: 1.42857; }
 
@@ -4291,7 +4291,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   overflow: hidden;
   min-height: 100%;
   width: 100%;
-  background-color: #fff; }
+  background-color: #dedfe1; }
 
 @media (min-width: 680px) {
   .modal {
@@ -5610,7 +5610,7 @@ legend {
   width: 100%;
   border: 1px solid #ddd;
   color: #444;
-  font-size: 18px;
+  font-size: 21px;
   line-height: 2.85714; }
   legend small {
     color: #f8f8f8;
@@ -5618,7 +5618,7 @@ legend {
 
 label, input, button, select, textarea {
   font-weight: normal;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.42857; }
 
 input, button, select, textarea {
@@ -5763,7 +5763,7 @@ input, button, select, textarea {
 
 .item-stacked-label input {
   overflow: hidden;
-  height: 41px; }
+  height: 46px; }
 
 .item-floating-label {
   display: block;
@@ -5786,11 +5786,11 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   display: block;
   padding-top: 2px;
   padding-left: 0;
-  height: 29px;
+  height: 34px;
   color: #111;
   vertical-align: middle;
-  font-size: 12px;
-  line-height: 14px; }
+  font-size: 14px;
+  line-height: 16px; }
 
 .platform-ios input[type="datetime-local"], .platform-ios input[type="date"], .platform-ios input[type="month"], .platform-ios input[type="time"], .platform-ios input[type="week"], .platform-android input[type="datetime-local"], .platform-android input[type="date"], .platform-android input[type="month"], .platform-android input[type="time"], .platform-android input[type="week"] {
   padding-top: 8px; }
@@ -5822,7 +5822,7 @@ input[type="radio"], input[type="checkbox"] {
   width: auto; }
 
 input[type="file"] {
-  line-height: 31px; }
+  line-height: 34px; }
 
 .previous-input-focus, .cloned-text-input + input, .cloned-text-input + textarea {
   position: absolute !important;
@@ -6373,7 +6373,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
     text-indent: .01px;
     text-overflow: '';
     white-space: nowrap;
-    font-size: 12px;
+    font-size: 14px;
     cursor: pointer;
     direction: rtl; }
   .item-select select::-ms-expand {
