--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
     font-size: 12px;
     color: #909090;
     padding-bottom: 10px;
+    text-align: justify;
 }
 
 .results {
@@ -79,9 +80,6 @@ button.btn-small {
 .profile-img img {
     width: 75px;
     height: 75px;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
 }
 
 .prod-info h4 {
@@ -419,8 +417,13 @@ p.info {
     font-weight: bold;
 }
 
+ion-item.area.item h3 {
+    padding-left: 10px;
+}
+
 ion-item.category.item h3 {
     font-weight: 700;
+    padding-left: 10px;
 }
 
 .balanced.amount {
@@ -522,7 +525,7 @@ ion-footer-bar.footer-shop h4 {
 
 .incard .item.header h2 {
     font-weight: bold;
-    color: #000;
+    color: #3b3f42;
     font-size: 14px;
     text-transform: uppercase;
 }
@@ -564,9 +567,50 @@ ion-item.my-balcont.item {
     border-bottom: 1px solid rgba(221, 221, 221, 0.4);
 }
 
+.item.item-input.itemimage button img {
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 0 3px;
+}
+
+.item.item-input.itemimage button {
+    padding: 0;
+    margin: 0;
+    min-height: 0;
+    line-height: 0;
+    border: 0;
+}
+
+.round-circle {
+    border: 2px solid #3185D7;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    margin: auto;
+    background: #3185D7;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.rounds-x {
+    border: 2px solid #dc3a29;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    background: #dc3a29;
+}
+
 .faq-cont p {
     padding: 10px 10px 0 10px;
     text-align: justify;
+}
+
+.item.item-input.item-text-wrap.itemproducts img {
+    width: 100%;
 }
 
 p.home-p {
@@ -574,4 +618,9 @@ p.home-p {
     text-align: right;
     padding-right: 15px;
     cursor: pointer;
+}
+
+h5.member {
+    padding-left: 8px;
+    font-size: 16px;
 }
