--- a/templates/search.html
+++ b/templates/search.html
@@ -1,23 +1,31 @@
 <ion-view view-title="Search Result" class="bar-royal">
     <ion-content class="padding">
-       
+
         <div class="incard pad-btm">
             <ion-list class="lesspadding">
                 <ion-item class="area">
                     <div class="row">
-                        <div class="col"><h3>Area</h3></div>
-                        <div class="col"><div class="flt-right">Mulund</div></div>
+                        <div class="col">
+                            <h3>Area</h3>
+                        </div>
+                        <div class="col">
+                            <div class="flt-right">Mulund</div>
+                        </div>
                     </div>
                 </ion-item>
                 <ion-item class="category">
                     <div class="row">
-                        <div class="col"><h3>Category</h3></div>
-                        <div class="col"><div class="flt-right">Mobile</div></div>
+                        <div class="col">
+                            <h3>Category</h3>
+                        </div>
+                        <div class="col">
+                            <div class="flt-right">Mobile</div>
+                        </div>
                     </div>
                 </ion-item>
             </ion-list>
         </div>
-        
+
         <div class="incard">
             <ion-list class="lesspadding">
                 <ion-item class="headed">
@@ -28,20 +36,23 @@
                 </ion-item>
                 <ion-item href="#/app/shop">
                     <div class="row">
-                        <div class="col">Nokia</div>
-                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                        <div class="col">Apple</div>
+                        <div class="col"><span class="balanced amount">Rs.60,000</span>
+                        </div>
                     </div>
-                </ion-item>     
-                              <ion-item href="#/app/shop">
+                </ion-item>
+                <ion-item href="#/app/shop">
                     <div class="row">
                         <div class="col">Nokia</div>
-                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                        <div class="col"><span class="balanced amount">Rs.50,000</span>
+                        </div>
                     </div>
-                </ion-item>           
-                        <ion-item href="#/app/shop">
+                </ion-item>
+                <ion-item href="#/app/shop">
                     <div class="row">
-                        <div class="col">Nokia</div>
-                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                        <div class="col">Samsung</div>
+                        <div class="col"><span class="balanced amount">Rs.40,000</span>
+                        </div>
                     </div>
                 </ion-item>
             </ion-list>
