--- a/templates/selling.html
+++ b/templates/selling.html
@@ -14,11 +14,11 @@
                                 <h2>Wohlig Technology</h2>
                                 <p>Amount: Rs.10,000</p>
 
-                                <button class="button button-small button-outline button-balanced">
+                                <button class="button button-small button-outline button-balanced" ng-click="showPopup();">
                                     Accept
                                 </button>
 
-                                <button class="button button-small button-outline button-assertive">
+                                <button class="button button-small button-outline button-assertive" ng-click=" showPopups();">
                                     Decline
                                 </button>
                             </div>
