--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,33 +7,12 @@
             </div>
 
             <div class="list profile-cont">
-
-                <!--
-             <div class="item item-input item-prf">
-    <input type="text" name="lname" value="Wohlig Technology" disabled>
-</div>
--->
-
-                <!--
-<div class="item item-input item-prf">
-    <div class="input-div">
-        Area
-    </div>
-    <input type="text" name="lname" value="Mulund" disabled>
-</div>
-<div class="item item-input item-prf">
-    <div class="input-div">
-        Category
-    </div>
-    <input type="text" name="lname" value="Mobile" disabled>
-</div>
--->
                 <div class="item item-input item-text-wrap header">
                     <h2> Address</h2>
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        Apple Store CST Mumbai-400 001.
+                        Apple Store, CST, Mumbai-400 001.
                     </div>
                 </div>
                 <div class="item item-input item-text-wrap header">
@@ -63,11 +42,7 @@
                             <img src="img/add.png">
                         </div>
                     </div>
-                    <!--
-               <div class="input">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-</div>
--->
+
                 </div>
                 <div class="item item-input item-text-wrap header">
                     <h2>Products Photos</h2>
@@ -90,22 +65,18 @@
                     </div>
                 </div>
 
-                <!--
-               <div class="input">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-</div>
--->
 
-                <!--        </div>-->
+
+
                 <div class="btn-edit padding-horizontal">
                     <div class="row">
                         <div class="col">
-                            <button class="button button-block button-balanced prf-edit">
+                            <a class="button button-block button-balanced prf-edit" href="#/app/profile/edit">
                                 Edit
-                            </button>
+                            </a>
                         </div>
                         <div class="col">
-                            <button class="button button-block button-assertive prf-reset" ng-click="openedit();">
+                            <button class="button button-block button-assertive prf-reset" ng-click="openPassword();">
                                 Reset Password
                             </button>
                         </div>
@@ -113,18 +84,8 @@
                 </div>
             </div>
         </div>
-        <!--
-        <div class="btn-edit padding">
-            <button class="button button-block button-outline button-balanced">
-                Edit
-            </button>
-        </div>
--->
+
 
     </ion-content>
-    <!--
-<ion-footer-bar class="footer-shop ion-item balanced">
-    <h4>Edit</h4>
-</ion-footer-bar>
--->
+
 </ion-view>
