--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -2,18 +2,13 @@
     <ion-header-bar class="bar-royal">
         <h1 class="title">Reset Password</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeModals()">Close</button>
+            <button class="button button-clear" ng-click="closePassword();">Close</button>
         </div>
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
             <form ng-submit="doreset()">
                 <div class="list">
-                    <!--
-<div class="item item-input header">
-    EnterNew Password
-</div>
--->
                     <div class="item item-input">
                         <input type="password" placeholder="Current Password">
                     </div>
