--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -17,8 +17,21 @@
                         <div class="item item-input">
                             <textarea placeholder="Description"></textarea>
                         </div>
-
-
+                        <div class="item item-input">
+                            <input type="text" placeholder="Mobile No.">
+                        </div>
+                        <div class="item item-input">
+                            <input type="text" placeholder="Landline No.">
+                        </div>
+                        <div class="item item-input">
+                            <input type="text" placeholder="Landline No.">
+                        </div>
+                        <div class="item item-input">
+                            <input type="text" placeholder="Email Id" type=email>
+                        </div>
+                        <div class="item item-input">
+                            <input type="text" placeholder="Website" type=email>
+                        </div>
                         <div class="item item-input item-text-wrap header">
                             <h2>Shops Photos</h2>
                         </div>
