--- a/templates/shop.html
+++ b/templates/shop.html
@@ -26,9 +26,35 @@
                     The Apple Store is a chain of retail stores owned and operated by Apple Inc., dealing with computers and consumer electronics.
                 </div>
             </div>
-            <div class="item item-input item-text-wrap header">
-                <h2> Shops Photos</h2>
-            </div>
+            <ion-item class="item-left">
+                <h2>Cell Number</h2>
+                <div class="pull-right item-right">
+                    9892999999
+                </div>
+            </ion-item>
+            <ion-item class="item-left">
+                <h2>Landline No.</h2>
+                <div class="pull-right item-right">
+                    022 25454565
+                </div>
+            </ion-item>
+            <ion-item class="item-left numbers">
+                <div class="pull-right item-right">
+                    022 25454565
+                </div>
+            </ion-item>
+            <ion-item class="item-left">
+                <h2>Email Id</h2>
+                <div class="pull-right item-right">
+                    sohan@gmail.com
+                </div>
+            </ion-item>
+            <ion-item class="item-left">
+                <h2>Website</h2>
+                <div class="pull-right item-right">
+                    http://www.apple.com/
+                </div>
+            </ion-item>
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div">
                     <button class="button" ng-click="openpswd();"><img src="img/shop1.png">
