--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,9 @@ ion-footer-bar.footer-shop {
 
 .pull-right {
     float: right;
-    padding-right: 8px;
+    font-size: 12px;
+    color: #909090;
+    margin-top: -3px;
 }
 
 ion-item.product.item {
@@ -661,10 +663,38 @@ h5.member {
     position: relative;
 }
 
+.button.bold {
+    background: #1A1E24;
+}
+
 ion-item.item-left.item h2 {
     float: left;
     padding-left: 5px;
     font-weight: bold;
     color: #3b3f42;
     font-size: 14px;
+}
+
+.item.item-royal {
+    border-color: #1b1f25;
+    background-color: #2c333d;
+    color: #fff;
+}
+
+.button-bar.transbtn .button {
+    -webkit-border-radius: 0px!important;
+    -moz-border-radius: 0px!important;
+    border-radius: 0px!important;
+    border-color: #1A1E24;
+}
+
+.add-amt h2 {
+    padding-top: 22px;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+.addamt p {
+    padding-top: 24px;
+    font-size: 15px;
 }
