--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,8 +5,19 @@
                 <img src="img/applelogo.jpg">
                 <h3>Apple Store</h3>
             </div>
-
             <div class="list profile-cont">
+                <ion-item class="item-left">
+                    <h2>Area</h2>
+                    <div class="pull-right item-right">
+                        Mulund
+                    </div>
+                </ion-item>
+                <ion-item class="item-left">
+                    <h2>Category</h2>
+                    <div class="pull-right item-right">
+                        Mobile
+                    </div>
+                </ion-item>
                 <div class="item item-input item-text-wrap header">
                     <h2> Address</h2>
                 </div>
