--- a/templates/shop.html
+++ b/templates/shop.html
@@ -10,6 +10,18 @@
 
                 </ion-item>
             </ion-list>
+            <ion-item class="item-left">
+                <h2>Area</h2>
+                <div class="pull-right item-right">
+                    Mulund
+                </div>
+            </ion-item>
+            <ion-item class="item-left">
+                <h2>Category</h2>
+                <div class="pull-right item-right">
+                    Mobile
+                </div>
+            </ion-item>
             <div class="item item-input item-text-wrap header">
                 <h2>Address</h2>
             </div>
