--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -12,6 +12,12 @@
                             <input type="text" placeholder="Name">
                         </div>
                         <div class="item item-input">
+                            <input type="text" placeholder="Area">
+                        </div>
+                        <div class="item item-input">
+                            <input type="text" placeholder="Category">
+                        </div>
+                        <div class="item item-input">
                             <textarea placeholder="Address"></textarea>
                         </div>
                         <div class="item item-input">
