--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -64,13 +64,20 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="add-amt">
-                                        <h2>Amount Added</h2>
+                                        <p>Amount Added
+                                        </p>
+                                    </div>
+                                    <div class="addamt">
+                                        <p>Rs.20,000</p>
                                     </div>
                                 </div>
                                 <div class="col">
+                                    <div class="add-amt">
+                                        <p>Date
+                                        </p>
+                                    </div>
                                     <div class="addamt">
-                                        <p>Rs.20,000</p>
-                                        <p>Date: 10th Mar 2015</p>
+                                        <p>10th Mar 2015</p>
                                     </div>
                                 </div>
                             </div>
