--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -160,7 +160,7 @@
                                 </div>
                             </ion-item>
                             <ion-item href="#/app/shop" class="item item-complex">
-                                <a class="item-content" ng-href="#/app/shop" target="_self" href="#/app/shop">
+                                <a class="item-content">
                                     <div class="row">
                                         <div class="col">Rs 60,000</div>
                                         <div class="col">10th Mar 2015
@@ -169,7 +169,7 @@
                                 </a>
                             </ion-item>
                             <ion-item href="#/app/shop" class="item item-complex">
-                                <a class="item-content" ng-href="#/app/shop" target="_self" href="#/app/shop">
+                                <a class="item-content">
                                     <div class="row">
                                         <div class="col">Rs 60,000</div>
                                         <div class="col">11th Mar 2015
@@ -178,7 +178,7 @@
                                 </a>
                             </ion-item>
                             <ion-item href="#/app/shop" class="item item-complex">
-                                <a class="item-content" ng-href="#/app/shop" target="_self" href="#/app/shop">
+                                <a class="item-content">
                                     <div class="row">
                                         <div class="col">Rs 60,000</div>
                                         <div class="col">12th Mar 2015
