--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
         <div class="list login-mk">
             <label class="item item-input">
                 <span class="input-label">Member ID</span>
-                <input type="text" placeholder="Member ID" ng-model="user.membershipno">
+                <input type="text" placeholder="Member ID" ng-model="user1.membershipno">
             </label>
             <label class="item item-input">
                 <span class="input-label">Password</span>
-                <input type="password" placeholder="Password" ng-model="user.password">
+                <input type="password" placeholder="Password" ng-model="user1.password">
             </label>
             <div class="btn-login">
-                <a class="button button-block button-balanced" ng-click="onlogin(user)" type="submit">Login</a>
+                <a class="button button-block button-balanced" ng-click="onlogin(user1)" type="submit">Login</a>
             </div>
 
             <!--<div class="forgot"><a href="#">Forgot Password?</a></div>-->
