--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,20 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="header-card">Find shops</div>
+<!--
             <label class="item item-input area">
                 <span class="input-label">Area</span>
                 <input type="text" placeholder="Enter Your Area">
+            </label>
+-->
+                       <label class="item item-input item-select area">
+                <div class="input-label">
+                    Area
+                </div>
+                <select>
+                    <option selected>Dharavi</option>
+                    <option>Airoli</option>
+                </select>
             </label>
             <label class="item item-input item-select area">
                 <div class="input-label">
